# image_upscaler-in-c-

./: CMakeLists.txt  README.md
.cache/clangd/index/: image.c.60AD4CF5E751CBD7.idx  io_stb.c.D195C81A05955138.idx  resize_bicubic.c.62C15C0FEDB942EE.idx  resize_bilinear.c.D456F7FD24D0F51A.idx  resize_nn.c.3D0D0D025FCE91FE.idx  stb_image.h.8FE64646F1FFA358.idx  stb_image_write.h.E47ABCE9BE8DBBD2.idx  test_image.c.02B86FC6354ADD35.idx  upsr_boundary.h.C3B47599859E073A.idx  upsr_image.h.3DE73BBD4A4750DC.idx  upsr_io.h.041A1CFE38F6FF41.idx  upsr_resize.h.C14C92D2101F932A.idx
examples/: test_image.c
include/: upsr_boundary.h  upsr_image.h  upsr_io.h  upsr_resize.h
src/: image.c  io_stb.c  resize_bicubic.c  resize_bilinear.c  resize_bilinear_fixed.c  resize_nn.c  tree.txt
